--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,8 +11,8 @@
   </welcome-file-list>
 
   <resource-ref>
-    <description>TydeDB Connection</description>
-    <res-ref-name>jdbc/TreenDB</res-ref-name>
+    <description>AppUserDB Connection</description>
+    <res-ref-name>jdbc/AppUserDB</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
