--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
       <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
       <init-param>
           <param-name>ExpiresDefault</param-name>
-          <param-value>modification plus 3 weeks</param-value>
+          <param-value>access plus 0 seconds</param-value>
       </init-param>
   </filter>
 
