--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
-         version="6.0">
+<web-app
+        xmlns = "https://jakarta.ee/xml/ns/jakartaee"
+        xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation = "https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+        version = "6.0"
+        metadata-complete = "false"
+>
 
   <display-name>Tyde</display-name>
 
@@ -38,6 +41,18 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>PointEndpoint</web-resource-name>
+      <description> Security constraint for Point WebSocket endpoint</description>
+      <url-pattern>/point-endpoint</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <description>user must have a role to access location data</description>
+      <role-name>foo</role-name>
+    </auth-constraint>
+  </security-constraint>
 
   <error-page>
     <location>/error</location>
