Remove servlets used for authentication/authorization testing, remove dummy roles usage

--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -60,9 +60,13 @@
     </web-resource-collection>
     <auth-constraint>
       <description>user must have a role to access location data</description>
-      <role-name>foo</role-name>
+      <role-name>tyde_user</role-name>
     </auth-constraint>
   </security-constraint>
+
+  <security-role>
+    <role-name>tyde_user</role-name>
+  </security-role>
 
   <error-page>
     <location>/error</location>
