--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,13 @@
     <res-auth>Container</res-auth>
   </resource-ref>
 
+  <resource-ref>
+    <description>TydeDB Connection</description>
+    <res-ref-name>jdbc/TydeDB</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>PointEndpoint</web-resource-name>
